# tasks

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  TASKS.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202602130001_initial_schema.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py
backend/tests/: test_health.py  test_migrations.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css
nginx/: nginx.conf
ux-mock/: index.html
